Minor fix to ensure that scrollbar is always visible.

--- a/client/app/styles/_lx-variables.scss
+++ b/client/app/styles/_lx-variables.scss
@@ -64,20 +64,22 @@ $chat-bubble-zindex: 10;
    we also have to account for two gutter widths (1/2 on left and right side of screen, and 1 between
    the video elements */
 
-$scrollbar-width: 12px; // this is an assumption, and can vary between browsers
+$scrollbar-width: 15px; // this is an assumption, and can vary between browsers
 
 $viewports-xs-list: 160px, 200px, 240px, 280px, 320px, 360px, 400px, 440px, 480px, 520px, 560px, 600px, 640px, 680px, 720px;
 $viewports-standard-sizes-list: $screen-sm, $screen-md, $screen-lg;
 $viewport-widths-list: join($viewports-xs-list, $viewports-standard-sizes-list);
 
+// Compute the "content" width, which is the width of the area inside the chat panel.
+// Note: we subract 2x because there may be a scrollbar on the broswer, and then another in the panel.
 $chat-panel-name-size: ();
 $content-widths-list: ();
 @each $viewport-width in $viewports-xs-list {
-  $content-widths-list: append($content-widths-list, $viewport-width - $xs-container-margin - $scrollbar-width);
+  $content-widths-list: append($content-widths-list, $viewport-width - $xs-container-margin - 2 * $scrollbar-width);
   $chat-panel-name-size: append($chat-panel-name-size, 1em);
 }
 @each $viewport-width in $viewports-standard-sizes-list {
-  $content-widths-list: append($content-widths-list, $viewport-width - $grid-gutter-width - $scrollbar-width);
+  $content-widths-list: append($content-widths-list, $viewport-width - $grid-gutter-width - 2 * $scrollbar-width);
   $chat-panel-name-size: append($chat-panel-name-size, 2em);
 }
 
